# near-doc

./: Cargo.toml  README.md
.github/workflows/: near-syn.yml
src/: contract.rs  lib.rs  main.rs  md.rs  near_sdk_syn.rs  near_syn.rs  prelude.ts  ts.rs
tests/: input.rs  lib-test.rs  main-tests.rs  syn-tests.rs  test-doc.rs  test-md.rs  test-ts.rs  ts-test.rs  ts.rs
tests/input/: _template.md  _template.ts  input1.rs  input2.rs  input3.rs  output1.ts  output2.md  output2.ts
