[package]
name = "near-syn"
version = "0.2.0"
authors = ["Luis Mastrangelo <luismastrangelo@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities", "template-engine", "wasm"]
repository = "https://github.com/acuarica/near-syn"
homepage = "https://github.com/acuarica/near-syn"
description = """
`near-syn` is a library and command line utilities to
make contract development for the NEAR platform easier.

The `near-syn` package contains two command line utilities:

- `near-ts` generates TypeScript bindings from Rust source files.
- `near-doc` generates Markdown documentation from Rust source files.
"""

[dependencies]
syn = {version = "1.0.14", features = ["full", "fold", "visit", "extra-traits", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.2"

[dev-dependencies]
assert_cmd = "1.0.3"
tempfile = "3.2.0"
