[package]
name = "near-syn"
version = "0.2.16"
authors = ["Luis Mastrangelo <luis_mastrangelo@epam.com>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities", "template-engine", "wasm"]
repository = "https://github.com/epam/near-syn"
homepage = "https://github.com/epam/near-syn"
description = """
Library and command line utilities to make contract development for the NEAR platform easier.
This package contains two command line utilities: near-ts to generate TypeScript bindings and near-doc to generates Markdown docs.
"""

[dependencies]
syn = {version = "1.0.14", features = ["full", "fold", "visit", "extra-traits", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
chrono = "0.4"
clap = "3.0.0-beta.2"

[dev-dependencies]
assert_cmd = "1.0.3"
tempfile = "3.2.0"
