[package]
name = "near-syn"
version = "0.3.1"
authors = ["Luis Mastrangelo <luismastrangelo@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["command-line-utilities", "template-engine", "wasm"]
repository = "https://github.com/acuarica/near-syn"
homepage = "https://github.com/acuarica/near-syn"
description = """
Library and command line utilities to make contract development for the NEAR platform easier.
This package contains two command line utilities: near-ts to generate TypeScript bindings and near-doc to generates Markdown docs.
"""

[dependencies]
syn = {version = "1.0.92", features = ["full", "fold", "visit", "extra-traits", "printing"] }
quote = "1.0"
proc-macro2 = "1.0.37"
chrono = "0.4"
clap = { version = "3.1.15", features = ["derive"] }

[dev-dependencies]
assert_cmd = "1.0.3"
tempfile = "3.2.0"
